(markdown) h1 title no longer huge on mobile
etalab/data.gouv.fr#436

--- a/theme/less/components/markdown.less
+++ b/theme/less/components/markdown.less
@@ -159,6 +159,10 @@ Content on the site can be styled with Markdown. Ready made styles are provided 
 
     h1 {
         font-size: @font-size-hg * @markdown-font-size;
+
+        @media @query-md {
+            margin-bottom: @spacing-lg;
+        }
     }
 
     h2 {
